--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -7,6 +7,7 @@
     overflow-y: auto;
     gap: 20px;
     transition: all 0.6s ease-in-out;
+    position: relative;
 }
 
 .empire-member-positions.open {
@@ -38,6 +39,8 @@
     background: unset;
     outline: 0;
     box-shadow: unset;
+    top: 0;
+    padding: 0;
 }
 
 .map-container .leaflet-container {
