--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -2,7 +2,7 @@
     background: rgba(254, 216, 76, 0.77);
     border-radius: 6px;
     position: absolute;
-    top: 100px;
+    top: 50px;
     transform-origin: center;
     outline: 2px solid rgba(196, 156, 0, 0.77);
     transition: transform 0.6s ease-in-out;
